# Brainwave_marketplace

./: .gitignore  README.md
.github/workflows/: cicd.yaml
backend/: README.md  main.py  pyproject.toml  requirements.txt  test_frontend.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx  page2.tsx
frontend/components/: brain-wave-market.tsx
frontend/components/test/: neurosity-marketplace.tsx
frontend/components/ui/: button.tsx
frontend/src/app/: app.module.css  layout.js  page.js
frontend/src/app/marketplace/: page.js
frontend/src/components/: ConnectNeurosityButton.js  ConnectWalletButton.js  navigation.js
frontend/src/utils/: main.js
frontend/src/wallets/: near.js
frontend_testing/: package-lock.json  package.json
frontend_testing/src/: App.js
ipfs_uploader/: .env  pyproject.toml
ipfs_uploader/ipfs_uploader/: main.py
